--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -110,12 +110,12 @@
     </nav>
     <div
       class="page-header header-filter"
-      style="background-image: url('assets/img/cover.jpeg');"
+      style="background-image: url('assets/img/cover.jpeg')"
     >
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h1 class="title ">Material Dashboard React</h1>
+            <h1 class="title">Material Dashboard React</h1>
             <h4 class="title">Tutorial and Components</h4>
             <h5 class="description">v1.10.0</h5>
             <a
@@ -186,7 +186,7 @@
     var fixed_section;
     var floating = false;
 
-    $().ready(function() {
+    $().ready(function () {
       suggestions_distance = $("#suggestions").offset();
       pay_height = $(".fixed-section").outerHeight();
 
@@ -195,6 +195,3 @@
     });
   </script>
 </html>
-
-
-
